feat: otp creation method
